--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700;800;900&display=swap" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+  
+    <script>
+        ScrollReveal({
+            reset: true
+        });
+
+        ScrollReveal().reveal('.headline');
+        ScrollReveal().reveal('.tagline', {
+            delay: 500
+        });
+        ScrollReveal().reveal('.punchline', {
+            delay: 2000
+        });
+    </script>
+
+
 </head>
+
 <body>
-    
+
+    <h1 class="headline">
+        Widget Inc.
+    </h1>
+    <p class="tagline">
+        The perfect widgets.
+        <span class="punchline">Forever.</span>
+    </p>
+    <script src="https://unpkg.com/scrollreveal"></script>
 </body>
+
 </html>
