--- a/index.html
+++ b/index.html
@@ -93,6 +93,32 @@
             </p>
 
         </section>
+
+        <div class="about__img" style="border: 1px solid red;">
+            <h1 class="headline">
+                Widget Inc.
+            </h1>
+            <img src="assets/img/flask.png">
+        </div>
+        <div class="about__content" style="border: 1px solid blue;">
+            <p class="tagline">
+                The perfect widgets.
+                <span class="punchline">Forever.</span>
+            </p>
+        </div>
+        
+        <div class="about__img" style="border: 1px solid red;">
+            <h1 class="headline">
+                Widget Inc.
+            </h1>
+            <img src="assets/img/flask.png">
+        </div>
+        <div class="about__content" style="border: 1px solid blue;">
+            <p class="tagline">
+                The perfect widgets.
+                <span class="punchline">Forever.</span>
+            </p>
+        </div>
     </main>
     <footer>
         <div>footer</div>
